--- a/PadelCourtBooker/PadelCourtBooker.App/PadelCourtBooker.App.csproj
+++ b/PadelCourtBooker/PadelCourtBooker.App/PadelCourtBooker.App.csproj
@@ -7,7 +7,31 @@
     <Company>Information Technlogies itWORKS</Company>
     <Authors>sb</Authors>
     <Version>1.0.0</Version>
+    <AssemblyName>PadelCourtBooker.App</AssemblyName>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Fonts\digital-7 %28mono%29.ttf" />
+    <None Remove="Fonts\led_real.ttf" />
+    <None Remove="Resources\delete.png" />
+    <None Remove="Resources\down.png" />
+    <None Remove="Resources\up.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Fonts\digital-7 (mono).ttf">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\delete.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\down.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\up.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Extended.Wpf.Toolkit" Version="4.0.2" />
