--- a/PadelCourtBooker/PadelCourtBooker.App/PadelCourtBooker.App.csproj
+++ b/PadelCourtBooker/PadelCourtBooker.App/PadelCourtBooker.App.csproj
@@ -35,6 +35,7 @@
 
   <ItemGroup>
     <PackageReference Include="Extended.Wpf.Toolkit" Version="4.0.2" />
+    <PackageReference Include="loggly-csharp" Version="4.6.1.92" />
     <PackageReference Include="MvvmLightLibs" Version="5.4.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Ninject" Version="3.3.4" />
