send push notification when a court is booked

--- a/PadelCourtBooker/PadelCourtBooker.App/PadelCourtBooker.App.csproj
+++ b/PadelCourtBooker/PadelCourtBooker.App/PadelCourtBooker.App.csproj
@@ -42,4 +42,10 @@
     <PackageReference Include="RestSharp" Version="106.11.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Resources\appData.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
